# Todo-App

./: .env  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
Backend/: crud.py  db.py  main.py  pyproject.toml  routes.py  schemas.py
todo/: index.html  package-lock.json  package.json
todo/src/: App.css  App.jsx  Todo.css  api.js
todo/src/components/: ParticleBackground.jsx  Todo.jsx
